--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,5 +7,7 @@ WORKDIR /go/src/github/josiokoko/movies-parser
 RUN go get -u golang.org/x/lint/golint
 
 COPY . .
+COPY go.mod ./ 
+COPY go.sum ./
 
 RUN go get -v 
