--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,7 +4,7 @@ ENV VERSION v1.0.22
 ENV GOCACHE /tmp
 WORKDIR /go/src/github/mlabouardy/movies-parser
 
-RUN wget ttps://github.com/sonatype-nexus-community/nancy/releases/download/v0.1.17/nancy-linux.amd64-v0.1.17 -O nancy && \
+RUN wget https://github.com/sonatype-nexus-community/nancy/releases/download/v0.1.17/nancy-linux.amd64-v0.1.17 -O nancy && \
     chmod +x nancy && mv nancy /usr/local/bin/nancy
 RUN go get -u golang.org/x/lint/golint
 
