--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -5,7 +5,7 @@ ENV GOCACHE /tmp
 WORKDIR /go/src/github/josiokoko/movies-parser
 
 RUN wget https://github.com/sonatype-nexus-community/nancy/releases/download/v0.1.17/nancy-linux.amd64-v0.1.17 -O nancy && \
-    chmod +x nancy && mv nancy /usr/local/bin/nancy
+    chmod +x nancy && mv nancy /home/joseph/gopath/bin/nancy
 RUN go get -u golang.org/x/lint/golint
 
 COPY . .
